--- a/.gitconfig
+++ b/.gitconfig
@@ -30,7 +30,7 @@
 [submodule]
 	fetchJobs = 4
 
-[url "https://github.com/"]
+[url "git@github.com:"]
 	insteadOf = git://github.com/
-	insteadOf = git@github.com:
+	insteadOf = https://github.com/
 	insteadOf = http://github.com/
