Changed: make the default git branch 'main'.

--- a/.gitconfig
+++ b/.gitconfig
@@ -35,5 +35,8 @@
 	insteadOf = https://github.com/
 	insteadOf = http://github.com/
 
+[init]
+	defaultBranch = main
+
 [core]
 	editor = /usr/bin/nvim
